# django-1-RamazanFIT

./: manage.py  pyproject.toml
hw1_django/: asgi.py  settings.py  urls.py  wsgi.py
t1/: urls.py  views.py
